--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main>
         <!-- Hero -->
         <section class="hero"> 
-            <div class="container-hero-container"> 
+            <div class="container hero-container"> 
             <h1 class="main-title">Effective Solutions for Your Business</h1>
             <button type ="button" class="title-btn">Order Service</button>
         </div>
@@ -293,10 +293,10 @@
     <footer class="whole-footer">
         <div class="container footer-container">
             <div class="footer-content"> 
-       <a href="./index.html" class="logo">WebStudio<span class="footer-logo">Studio</span></a>
+       <a href="./index.html" class="logo">Web<span class="footer-logo">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
-        <div>
+        <div class="footer-social">
             <p class="media-text">Social media</p>
             <ul class="footer-social-list">
                 <li class="footer-social-item"><a href="https://instagram.com/" target="_blank" class="item-link">
@@ -321,8 +321,95 @@
                 </a></li>
             </ul>
         </div>
+        <div class="footer-subscribe">
+            <p class="footer-subscribe-text">Subscribe</p>
+<form class="footer-subscribe-form">
+    <label class="subscribe-form-label">
+        <input class="subscribe-form-input" 
+        name="user-email" 
+        type="email" 
+        placeholder="E-mail"></label>
+        <button class="subscribe-button" type="submit">Subscribe 
+            <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+            </svg>
+
+        </button>
+
+</form>
+        </div>
     </div>
     
     </footer>
+    `<div class="backdrop is-open">
+<div class="modal-window">
+    <button type="button"  class="modal-close-btn">
+        <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+    </button>
+<p class="modal-window-title">
+    Leave your contacts and we will call you back
+</p>
+<form class="modal-form">
+    <div class="modal-form-field-wrapper">
+<label for="user-name" class="modal-form-label">Name
+</label>
+<div class="modal-form-input-wrapper">
+<input class="modal-form-input" type="text" name="user-name" id="user-name" required />
+<svg class="modal-form-field-icon" width="18" height="24">
+    <use href="./images/icons.svg#icon-person">
+</use>
+</svg>
+</div>
+    </div>
+    <div class="modal-form-field-wrapper">
+        <label for="user-phone" class="modal-form-label">Phone
+        </label>
+        <div class="modal-form-input-wrapper">
+        <input class="modal-form-input" type="tel" name="user-phone" id="user-phone" required />
+        <svg class="modal-form-field-icon" width="18" height="24">
+            <use href="./images/icons.svg#icon-phone">
+        </use>
+        </svg>
+        </div>
+            </div>
+            <div class="modal-form-field-wrapper">
+                <label for="user-email" class="modal-form-label">Email
+                </label>
+                <div class="modal-form-input-wrapper">
+                <input class="modal-form-input" type="email" name="user-email" id="user-email" required />
+                <svg class="modal-form-field-icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-email">
+                </use>
+                </svg>
+                </div>
+                    </div>
+                    <div class="modal-form-field-wrapper-comments">
+<label for="user-comment" class="modal-form-label">Comment
+</label>
+<textarea class="modal-form-message" 
+name="user-comment" id="user-comment" placeholder="Text input" required></textarea>
+</div>
+<div class="modal-form-checkbox-wrapper">
+    <input class="modal-form-privacy-checkbox visually-hidden" type="checkbox" name="user-privacy" value="true" id="user-privacy" required />
+<label class="modal-form-checkbox-label" for="user-privacy">
+    <span class="modal-form-own-checkbox">
+        <svg class="modal-form-own-checkbox-icon" width="10" height="8">
+            <use href="./images/icons.svg#icon-vector">
+  </use>
+        </svg>
+
+    </span>
+    I accept the terms and conditions of the <a class="privacy-policy-link" href="">Privacy Policy</a> 
+</label>
+</div>
+<button class="modal-form-submit-btn" type="submit">Send
+
+</button>
+
+    </form>
+</div>
+    </div>
 </body> 
 </html>
